envoy/tenant2-gateway.yaml
# prod-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tenant2-envoy-gw
  namespace: default
  annotations:
    metallb.universe.tf/loadBalancerIPs: "198.51.100.20"
spec:
  gatewayClassName: eg
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "prod.tenant2.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - name: tenant2-tls-cert
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
  - name: http-redirect
    port: 80
    protocol: HTTP
    hostname: "prod.tenant2.dev"
    allowedRoutes:
      namespaces:
        from: Same
